--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+@import 'algolia';
 @import url('https://fonts.googleapis.com/css?family=Inria+Serif|Quicksand&display=swap');
 body {
     font-family: 'Inria Serif', serif;
