--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-root {
+@import '~tailwindcss/base';
+@import '~tailwindcss/components';
+@import '~tailwindcss/utilities';
+:root {
     --mainBg: mediumpurple;
 }
 
@@ -20,3 +20,9 @@ body {
         text-align: center;
     }
 }
+
+// #img {
+//     background-image: url(mainImg);
+//     width: 200px;
+//     height: 200px;
+// }
