Changed the background color to orange

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 @import '~tailwindcss/components';
 @import '~tailwindcss/utilities';
 :root {
-    --mainBg: mediumpurple;
+    --mainBg: orange;
 }
 
 $light-text: salmon;
