--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,13 @@
 @import '~tailwindcss/base';
 @import '~tailwindcss/components';
 @import '~tailwindcss/utilities';
+@use 'colors';
+
+/** Basic Styling */
+
+footer {
+    background-color: $blueviolet;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
