--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 @import '~tailwindcss/base';
 @import '~tailwindcss/components';
 @import '~tailwindcss/utilities';
-@use 'colors';
+@import 'colors';
 
 /** Basic Styling */
 
