--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -131,7 +131,7 @@ a:hover {
 footer {
     background-color: $blueviolet;
     text-align: center;
-    color: white;
+    color: $white;
     font-size: 20px;
 }
 
