--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,21 +1,13 @@
 /** SCSS Imports */
 
-@import 'normalize';
 @import 'algolia';
 @import 'mediaqueries';
-@import 'web-fonts';
 @import 'colors';
 @import 'buttons';
-@import 'firebaseui';
 
 /** Google Fonts */
 
-@import url('https://fonts.googleapis.com/css?family=Inria+Serif|Quicksand&display=swap');
-@include google-font {
-    @include google-font(Quicksand,
-    700);
-    @include google-font(Inria Serif);
-}
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif&family=Quicksand:wght@500&display=swap');
 
 
 /** Font Awesome */
@@ -88,6 +80,7 @@ h6 {
 nav {
     background: $blueviolet;
     padding: 5px 20px;
+
     a {
         font-size: 20px;
     }
@@ -194,9 +187,11 @@ a {
 
 .item {
     padding: 10px;
+
     &.button {
         padding: 9px 5px;
     }
+
     &:not(.button) a:hover,
     a:hover::after {
         color: $white;
@@ -211,11 +206,13 @@ a {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+
     li {
         a {
             display: block;
             padding: 15px 5px;
         }
+
         &.subitem a {
             padding: 15px;
         }
@@ -231,6 +228,7 @@ a {
     &.button {
         order: 2;
     }
+
     order: 3;
     width: 100%;
     text-align: center;
@@ -261,6 +259,7 @@ a {
     i {
         font-size: 12px;
     }
+
     >a::after {
         font-family: "Font Awesome 5 Free";
         font-size: 12px;
@@ -288,35 +287,43 @@ a {
     .menu {
         justify-content: center;
     }
+
     .logo {
         flex: 1;
     }
+
     .item.button {
         width: auto;
         order: 1;
         display: block;
     }
+
     .toggle {
         flex: 1;
         text-align: right;
         order: 2;
     }
+
     /* Button up from tablet screen */
     .menu li.button a {
         padding: 10px 15px;
         margin: 5px 0;
     }
+
     .button {
         a {
             background: $royalblue;
             border: 3px $royalblue solid;
         }
+
         &.secondary {
             border: 0;
+
             a {
                 background: transparent;
                 border-radius: 27px;
                 border: 3px $royalblue solid;
+
                 &:hover {
                     background: $safron;
                     color: $white;
@@ -324,9 +331,11 @@ a {
                 }
             }
         }
+
         a:hover {
             text-decoration: none;
         }
+
         &:not(.secondary) a:hover {
             background: $blueviolet;
             border-color: $white;
@@ -344,18 +353,22 @@ a {
         flex-wrap: nowrap;
         background: none;
     }
+
     .logo {
         order: 0;
     }
+
     .item {
         order: 1;
         position: relative;
         display: block;
         width: auto;
     }
+
     .button {
         order: 2;
     }
+
     .submenu-active .submenu {
         display: block;
         position: absolute;
@@ -363,9 +376,11 @@ a {
         top: 68px;
         background: #111;
     }
+
     .toggle {
         display: none;
     }
+
     .submenu-active {
         border-radius: 0;
     }
